Add websocket support and redis integration

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,8 @@ AUTH_JWT_SECRET=""
 AUTH_APP_ID=""
 
 IDDB_HOST=""
-IDDB_PORT=""
 IDDB_USER=""
 IDDB_PASSWORD=""
 IDDB_DATABASE=""
+
+REDIS_PREFIX="lux"
